[tool.poetry]
name = "dask-lightning"
version = "0.1.0"
description = ""
authors = ["Niklas Kappel <niklas.kappel@kit.edu>"]
readme = "README.md"
packages = [{include = "dask_lightning", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
lightning = "^2.4.0"
dask = "^2024.9.0"
distributed = "^2024.9.0"
dask-jobqueue = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
